# scalapacke

./: .bumpversion.cfg  .gitignore  404.html  MANIFEST.in  Makefile  README.md  cblacs-header.py  cblacs.h.j2  index.html  meson.build  meson_options.txt  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  test.py
.github/workflows/: publish-doc.yml  publish.yml  push.yml  release.yml  test_generate.yml  test_lib.yml  test_run.yml  tests.yml
about/: index.html
contrib/CONTRIBUTING/: index.html
contrib/notes/: index.html
dev/install/: index.html
dev/quickstart/: index.html
dev/tutorial/: index.html
docs/: about.md  index.md  install.md
docs/assets/: blacs_gridinit.odg  cyclic_distribution.odg  diag_scalapack.odg  lapack_vs_scalapack.odg
docs/contrib/: CONTRIBUTING.md  notes.md
docs/dev/: install.md  quickstart.md  tutorial.md
include/: blacs.h  pblas.h  scalapack.h  scalapack_config.h  scalapacke.h  scalapacke_blacs.h  scalapacke_pblas.h
javascript/: katex.js
scalapack_files_create/: __init__.py  base.py  create_cblacs.py  create_cpblas.py  create_scalapack.py  fortran.py  script.py
scalapack_files_create/templates/: blacs.h.j2  cblacs.h  cpblas.h.j2  pblas.h.j2  scalapack.h.j2  scalapacke.h.j2  scalapacke_blacs.c.j2  scalapacke_blacs.h.j2  scalapacke_pblas.h.j2
scalapacke_files_create/: README.md  __init__.py  base.py  create_cblacs.py  create_cpblas.py  create_scalapack.py  fortran.py  script.py
scalapacke_files_create/templates/: blacs.h.j2  pblas.h.j2  scalapack.h.j2  scalapacke.c.j2  scalapacke.h.j2  scalapacke_blacs.c.j2  scalapacke_blacs.h.j2  scalapacke_pblas.c.j2  scalapacke_pblas.h.j2
scripts/: meson.wrap.in  package_it.sh  release_it.sh
search/: search_index.json
src/: meson.build  scalapacke.c  scalapacke_blacs.c  scalapacke_pblas.c
tests/: README.md  hello_blacs.c  lowlevel_pdgemm.c  meson.build  midlevel_pdgemm.c  pcgeqrf.c  pdgemm.c  pdgemm_residual.c  pdsyev.c  pigemr2d.c  psgels.c  test_blacs.c  test_cblacs.c  test_cblacs_ccall.c  test_cblacs_ccalls.c  test_cblacs_fcall.c  test_cblacs_fcalls.c  test_cpblas_ccalls.c  test_cpblas_fcalls.c  test_pblas.c  tutorial_pdsyev.c
