option(
    'la_backend',
    type: 'string',
    value: 'scalapack',
    description : 'linear algebra backend'
)

option(
    'mkl_mpi',
    type: 'combo',
    value: 'openmpi',
    choices: ['intelmpi', 'openmpi'],
    description : 'MPI implementation to be used with MKL'
)

option(
    'la_libraries',
    type: 'array',
    description : 'libraries to loaded if `la_backend=custom`'
)

option(
    'ilp64',
    type: 'boolean',
    description : 'use 64-bit integers'
)

# tests
option(
    'tests',
    type: 'boolean',
    value: false,
    description: 'Include tests',
)

option(
    'tests_nprocs',
    type: 'integer',
    value: 2,
    description: 'Number of MPI instance while running test',
)